# vim: set noexpandtab:
2013-03-01 Matt 
	* Changed getMet function to never override the phi of the met for systematics.
	
2013-02-23 Serhan Mete <amete@cern.ch>
	* Root/SleptonXsecReader.cxx: Added the option kLHRHCombined
	  Use w/ caution, only implemented for getCrossSection[Error](mcid,finalState)
	  For Error, LH and RH cross section errors are asumed to be 100% positively correlated
	* Added: data/DLiSlep_SignalUncertainties_All.root
	* MERGE SusyNtuple SusyNtuple-00-00-00-branch [315917]-[316945] into trunk
	* Cross section reader from Davide for Slepton grids

2013-02-20 Steve
	* Added etx and ety pieces for each MET ref term
	* Tagging SusyNtuple-00-00-51

2013-02-19 Matt
	* Updated SusyNtTools passDeadRegions to check all MC

2013-02-16 Anyes
	* update to the later btag weight file 
	* Added a param to DilTri to turn off ReweightUtils. Default is on.
	* DetEta for 2L jets is now default

2013-02-13 Anyes
	* Fix |JVF|>0 to deal with flaoting point 

2013-02-13 Steve
	* Tagging SusyNtuple-00-00-50

2013-02-13 Matt
	* Fix for p1181 btag sf method -- typo in header and .env file

2013-02-13 Steve
	* Tagging SusyNtuple-00-00-49

2013-02-13 Matt
	* Updated 2lep jet definitions btag value to MV1_80
	* Restored 3lep ability to get p1181 sf for MV1_85 (required addition of BTagCalibp1181)

2013-02-13 Steve
	* Added isOppSign method for lep, tau
	* Added support for applying tau systematics
		* Added setState method to Tau class
		* Added support for tes_up and tes_dn in getBaselineObjects
	* Tagging SusyNtuple-00-00-48

2013-02-12 Matt
	* Updated BTagSF code (Copied and modified from SUSYTools) and modified corresponding SusyNtTools function
	* If 2lep flag is set, you will get the unbiased IP
	* Btag eff maps added (root file) along with .env file to load them properly
	* Added MV1_80 (which will be the new operating point). Now the default in get bTagSF.

2013-02-11 Matt
	* Updated central jet eta cut from 2.5 to 2.4